--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Matthieu LEPERS",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MatthieuLepers/sequelize-typescript-i18n"
+  },
   "dependencies": {
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
